--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -81,7 +81,7 @@ svg,img { max-width: 100%; height: auto; }
 .ds-experience-section{ padding-bottom: 120px; }
 .ds-experience-list section{ padding-right: 70px; }
 .ds-experience-list{ padding-top: 15px; }
-.ds-officename{ font-size: 24px; font-weight: 300; margin-bottom:10px; }
+.ds-officename{ color: #373737; font-size: 24px; font-weight: 300; margin-bottom:10px; }
 .ds-experience-list span{ display: block; }
 span.ds-year{ color: #373737; font-size: 14px; font-weight: 700; padding-bottom: 10px; }
 span.ds-department{ color: #373737; font-weight: 500; font-size: 18px; padding-bottom: 30px; }
@@ -120,6 +120,36 @@ span.ds-department{ color: #373737; font-weight: 500; font-size: 18px; padding-b
 .ds-copyright a{color: rgba(255,255,255,0.5);}
 .ds-copyright a:hover{ color: #3ECCFA; }
 
+.hero-page-div {
+	height: 100vh;
+  }
+  
+  .hero-page {
+	height: 100%;
+	width: 100%;
+	text-align: center;
+  }
+  
+  /*
+  .container {
+	padding: 0;
+	margin: 0;
+	padding-top: 4rem;
+	padding-left: 1rem;
+	padding-right: 1rem;
+	max-width: none;
+	height: 100%;
+  }
+  */
+  
+  .i-do-grid {
+  }
+  
+  @media (max-width: 400px) {
+	.orgs {
+	  height: fit-content !important;
+	}
+  }
 
 
 /*-------------------------------------------------------------------------------
